<resources>
    <string name="app_name">MyFood</string>
    <string name="sign_in_cancelled">Sign in was cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">Unknown error</string>
    <string name="recipes">Manage recipes</string>
    <string name="TextViewRecipeTitle">Title:</string>
    <string name="TextViewRecipeDescription">Description:</string>
    <string name="TextViewRecipeLastEaten">Last Eaten:</string>
    <string name="TextViewRecipePoints">Points:</string>
    <string name="TextViewRecipeRemarks">Remarks:</string>
    <string name="ButtonDatePicker">Pick Date</string>
    <string name="buttonSaveText">Save</string>
    <string name="ErrorSave">Error saving</string>
    <string name="sign_out">Sign Out</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">2127392894208142</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb2127392894208142</string>
    <string name="MainActivityTitle">Top suggestions</string>
    <string name="ButtonRecalculate">Recalculate</string>
</resources>
